--- a/education_exam/static/description/index.html
+++ b/education_exam/static/description/index.html
@@ -1,5 +1,5 @@
 <div style="padding-top: 4%;">
-    <img src="line_upper.png">
+    <img src="line_upper.png" style="width:100%;">
     <section class="oe_container oe_dark">
         <div class="oe_row oe_spaced">
             <h2 class="oe_slogan"
@@ -32,7 +32,7 @@
             </h4>
         </div>
     </section>
-    <img src="line_bottom.png">
+    <img src="line_bottom.png" style="width:100%;">
 </div>
 <section class="oe_container ">
     <div class="oe_row oe_spaced">
