[ADD] Security files

--- a/education_time_table/static/description/index.html
+++ b/education_time_table/static/description/index.html
@@ -17,7 +17,7 @@
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced" style="margin-bottom: 0px;">
         <h2 class="oe_slogan" style="padding-top: 0%;text-transform: uppercase;font-weight: 900;color: #3d3d3d !important;margin-bottom:18px;">
-            Educational Time Table
+            Educational Timetable
         </h2>
 
         <h4 class="oe_slogan">
@@ -36,14 +36,14 @@
             <h3 class="oe_slogan">Overview</h3>
             <p class="oe_mt32 text-justify" style="text-align: center;">
                 Educational ERP is a one-stop shop for all your school
-                administration management activities.  Time Table management
+                administration management activities.  Timetable management
                 module enables you to efficiently manage the academic year via
                 streamlining the timetable keeping focus on all subjects
-                and their management. Time table management module helps
+                and their management. Timetable management module helps
                 in aligning the proper schedule and thereby allot faculties
                 as per their availability. It delivers high flexibility in
                 restructuring the periods in accordance to the need. One can easily
-                sort the time tables according to the classes, their division or
+                sort the timetable according to the classes, their division or
                 with respect to the faculties. Time management module acts as robust
                 platform to forecast and thereby plan accordingly the efficient
                 utilization of school time resulting greater performance and productivity.
@@ -54,7 +54,7 @@
 
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
-        <h4 class="oe_slogan">Time Table</h4>
+        <h4 class="oe_slogan">Timetable</h4>
         <div class="oe_span12">
             <div class="oe_row_img oe_centered">
                 <img class="oe_picture oe_screenshot" src="timetable.png">
@@ -65,7 +65,7 @@
 
 <section class="oe_container ">
     <div class="oe_row oe_spaced">
-        <h4 class="oe_slogan">Class wise Time Table</h4>
+        <h4 class="oe_slogan">Class wise Timetable</h4>
         <div class="oe_span12">
             <div class="oe_row_img oe_centered">
                 <img class="oe_picture oe_screenshot" src="class_wise.png">
@@ -76,7 +76,7 @@
 
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
-        <h4 class="oe_slogan">Current Week Time Table</h4>
+        <h4 class="oe_slogan">Current Week Timetable</h4>
         <div class="oe_span12">
             <div class="oe_row_img oe_centered">
                 <img class="oe_picture oe_screenshot" src="week_wise.png">
@@ -87,7 +87,7 @@
 
 <section class="oe_container ">
     <div class="oe_row oe_spaced">
-        <h4 class="oe_slogan">Faculty wise Time Table</h4>
+        <h4 class="oe_slogan">Faculty wise Timetable</h4>
         <div class="oe_span12">
             <div class="oe_row_img oe_centered">
                 <img class="oe_picture oe_screenshot" src="faculty_wise.png">
