[UPDT] index and manifest

--- a/education_attendances/static/description/index.html
+++ b/education_attendances/static/description/index.html
@@ -4,7 +4,7 @@
         <div class="oe_row oe_spaced">
             <h2 class="oe_slogan"
                 style="font-size: 32px;text-transform: uppercase;font-weight: 900;margin-bottom:18px;">
-                <a href="http://educationalerp.com">
+                <a href="http://www.educationalerp.com">
                     Educational ERP
                 </a>
             </h2>
@@ -104,7 +104,7 @@
         <h2>Our Odoo Services</h2>
     </div>
     <div class="bc-span col-md-12">
-        <div class="inner-span"><a target="_blank" href="http://educationalerp.com"><img
+        <div class="inner-span"><a target="_blank" href="http://www.educationalerp.com"><img
                 class="img-border img-responsive thumbnail" src="cybro-service.png"></a></div>
     </div>
 
@@ -113,21 +113,28 @@
 </div>
 
 <section class="oe_container oe_dark">
-    <h2 class="oe_slogan" style="margin-top:20px;">Need Any Help?</h2>
+    <h2 class="oe_slogan" style="margin-top:20px;" >Need Any Help?</h2>
     <div class="oe_slogan" style="margin-top:10px !important;">
         <div>
-            <a class="btn btn-primary btn-lg mt8"
-               style="color: #FFFFFF !important;border-radius: 0;" href="https://www.cybrosys.com"><i
-                    class="fa fa-envelope"></i> Email </a> <a
-                class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
-                href="https://www.cybrosys.com/contact/"><i
-                class="fa fa-phone"></i> Contact Us </a> <a
-                class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
-                href="https://www.cybrosys.com/odoo-customization-and-installation/"><i
-                class="fa fa-check-square"></i> Request Customization </a>
+            <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.cybrosys.com/contact/" target="_blank"><i
+            class="fa fa-phone"></i> Contact Us </a>
+
+            <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.odoo.com/apps/modules/browse?search=Educational" target="_blank"><i
+            class="fa fa-suitcase"></i> Other Educational Addons </a>
+
+            <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.cybrosys.com/odoo-customization-and-installation/" target="_blank"><i
+            class="fa fa-wrench"></i> Request Customization </a>
+
         </div>
         <br>
-        <img src="cybro_logo.png" style="width: 190px; margin-bottom: 20px;" class="center-block">
+        <a href="https://www.cybrosys.com/" target="_blank">
+            <img src="cybro_logo.png" style="width: 190px; margin-bottom: 20px;" class="center-block">
+        </a>
     </div>
 </section>
-
