--- a/education_core/static/description/index.html
+++ b/education_core/static/description/index.html
@@ -3,7 +3,7 @@
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="font-size: 32px;text-transform: uppercase;font-weight: 900;margin-bottom:18px;" >
-            <a href="http://educationalerp.com">
+            <a href="http://www.educationalerp.com">
                 Educational ERP
             </a>
         </h2>
@@ -295,8 +295,8 @@
 
             <a
             class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
-            href="https://www.odoo.com/apps/modules/browse?search=cybrosys" target="_blank"><i
-            class="fa fa-suitcase"></i> Other Cybrosys Addons </a>
+            href="https://www.odoo.com/apps/modules/browse?search=Educational" target="_blank"><i
+            class="fa fa-suitcase"></i> Other Educational Addons </a>
 
             <a
             class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
