[UPDT] Index files

--- a/education_core/static/description/index.html
+++ b/education_core/static/description/index.html
@@ -1,7 +1,7 @@
 <div style="padding-top: 4%;">
 <img src="line_upper.png" style="width:100%;">
 <section class="oe_container oe_dark">
-    <div class="oe_row oe_spaced">
+    <div class="oe_row oe_spaced text-center">
         <h2 class="oe_slogan" style="font-size: 32px;text-transform: uppercase;font-weight: 900;margin-bottom:18px;" >
             <a href="http://www.educationalerp.com">
                 Educational ERP
@@ -11,6 +11,9 @@
         <h3 style="margin: 0;opacity: 0.8;font-size: 22px;font-weight: 300;" class="oe_slogan">
             The Ultimate Educational Management Software
         </h3>
+            <a class=" btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="http://www.educationalerp.com/#request-demo" target="_blank"><i
+            class="fa fa-wrench"></i> Request For Demo </a>
     </div>
 </section>
 
@@ -146,7 +149,9 @@
         <h2 class="oe_slogan">Student Record</h2>
         <div class="oe_span6">
             <div class="oe_row_img oe_centered">
-                <img class="oe_picture oe_screenshot" src="student_record.png" style="width: 50%;">
+                <a href="http://www.educationalerp.com/" target="_blank">
+                    <img class="oe_picture oe_screenshot" src="student_record.png" style="width: 50%;">
+                </a>
             </div>
         </div>
         <div class="oe_span6">
@@ -277,7 +282,7 @@
     </div>
     <div class="bc-span col-md-12">
         <div class="inner-span">
-            <a target="_blank" href="https://www.cybrosys.com">
+            <a target="_blank" href="http://www.educationalerp.com">
                 <img class="img-border img-responsive thumbnail" src="cybro-service.png">
             </a>
         </div>
