--- a/education_theme/static/description/index.html
+++ b/education_theme/static/description/index.html
@@ -1,35 +1,38 @@
 <div style="padding-top: 4%;">
-<img src="line_upper.png" style="width:100%;">
-<section class="oe_container oe_dark">
-    <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="font-size: 32px;text-transform: uppercase;font-weight: 900;margin-bottom:18px;" >
-            <a href="http://educationalerp.com">
-                Educational ERP
-            </a>
-        </h2>
-        <hr style="width: 13%;height: 4px;background: #e55d5d;margin-top: 0px !important;"/>
-        <h3 style="margin: 0;opacity: 0.8;font-size: 22px;font-weight: 300;" class="oe_slogan">
-            The Ultimate Educational Management Software
-        </h3>
-    </div>
-</section>
+    <img src="line_upper.png" style="width:100%;">
+    <section class="oe_container oe_dark">
+        <div class="oe_row oe_spaced text-center">
+            <h2 class="oe_slogan" style="font-size: 32px;text-transform: uppercase;font-weight: 900;margin-bottom:18px;" >
+                <a href="http://www.educationalerp.com">
+                    Educational ERP
+                </a>
+            </h2>
+            <hr style="width: 13%;height: 4px;background: #e55d5d;margin-top: 0px !important;"/>
+            <h3 style="margin: 0;opacity: 0.8;font-size: 22px;font-weight: 300;" class="oe_slogan">
+                The Ultimate Educational Management Software
+            </h3>
+                <a class=" btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+                href="http://www.educationalerp.com/#request-demo" target="_blank"><i
+                class="fa fa-wrench"></i> Request For Demo </a>
+        </div>
+    </section>
 
-<section class="oe_container oe_dark">
-    <div class="oe_row oe_spaced" style="margin-bottom: 0px;">
-        <h2 class="oe_slogan" style="padding-top: 0%;text-transform: uppercase;font-weight: 900;color: #3d3d3d !important;margin-bottom:18px;">
-            Educational ERP Theme
-        </h2>
-        <hr style="width: 13%;height: 4px;background: #e55d5d;margin-top: 0px !important;"/>
-        <h3 class="oe_slogan" style="margin: 0;opacity: 0.8;font-size: 22px;font-weight: 300;">
-            Insight to Educational ERP
-        </h3>
-        <h4 class="oe_slogan">
-            <a href="https://www.cybrosys.com">
-                Cybrosys Technologies
-            </a>
-        </h4>
-    </div>
-</section>
+    <section class="oe_container oe_dark">
+        <div class="oe_row oe_spaced" style="margin-bottom: 0px;">
+            <h2 class="oe_slogan" style="padding-top: 0%;text-transform: uppercase;font-weight: 900;color: #3d3d3d !important;margin-bottom:18px;">
+                Educational ERP Theme
+            </h2>
+            <hr style="width: 13%;height: 4px;background: #e55d5d;margin-top: 0px !important;"/>
+            <h3 class="oe_slogan" style="margin: 0;opacity: 0.8;font-size: 22px;font-weight: 300;">
+                Insight to Educational ERP
+            </h3>
+            <h4 class="oe_slogan">
+                <a href="https://www.cybrosys.com">
+                    Cybrosys Technologies
+                </a>
+            </h4>
+        </div>
+    </section>
     <img src="line_bottom.png" style="width:100%;">
 </div>
 <section class="oe_container ">
@@ -64,7 +67,9 @@
         <h4 class="oe_slogan">Reports</h4>
         <div class="oe_span12">
             <div class="oe_row_img oe_centered">
-                <img class="oe_picture oe_screenshot" src="education_theme_2.png">
+                <a href="http://www.educationalerp.com/" target="_blank">
+                    <img class="oe_picture oe_screenshot" src="education_theme_2.png">
+                </a>
             </div>
         </div>
     </div>
@@ -86,30 +91,34 @@
         <h2>Our Odoo Services</h2>
     </div>
     <div class="bc-span col-md-12">
-        <div class="inner-span"><a target="_blank" href="http://educationalerp.com"><img
+        <div class="inner-span"><a target="_blank" href="http://www.educationalerp.com"><img
                 class="img-border img-responsive thumbnail" src="cybro-service.png"></a></div>
     </div>
-
-</div>
-
 </div>
 
 <section class="oe_container oe_dark">
     <h2 class="oe_slogan" style="margin-top:20px;">Need Any Help?</h2>
     <div class="oe_slogan" style="margin-top:10px !important;">
         <div>
-            <a class="btn btn-primary btn-lg mt8"
-               style="color: #FFFFFF !important;border-radius: 0;" href="https://www.cybrosys.com"><i
-                    class="fa fa-envelope"></i> Email </a> <a
-                class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
-                href="https://www.cybrosys.com/contact/"><i
-                class="fa fa-phone"></i> Contact Us </a> <a
-                class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
-                href="https://www.cybrosys.com/odoo-customization-and-installation/"><i
-                class="fa fa-check-square"></i> Request Customization </a>
+            <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.cybrosys.com/contact/" target="_blank"><i
+            class="fa fa-phone"></i> Contact Us </a>
+
+            <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.odoo.com/apps/modules/browse?search=Educational" target="_blank"><i
+            class="fa fa-suitcase"></i> Other Educational Addons </a>
+
+            <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.cybrosys.com/odoo-customization-and-installation/" target="_blank"><i
+            class="fa fa-wrench"></i> Request Customization </a>
+
         </div>
         <br>
-        <img src="cybro_logo.png" style="width: 190px; margin-bottom: 20px;" class="center-block">
+        <a href="https://www.cybrosys.com/" target="_blank">
+            <img src="cybro_logo.png" style="width: 190px; margin-bottom: 20px;" class="center-block">
+        </a>
     </div>
 </section>
-
