[UPDT] index file

--- a/education_promotion/static/description/index.html
+++ b/education_promotion/static/description/index.html
@@ -156,21 +156,28 @@
 </div>
 
 <section class="oe_container oe_dark">
-    <h2 class="oe_slogan" style="margin-top:20px;">Need Any Help?</h2>
+    <h2 class="oe_slogan" style="margin-top:20px;" >Need Any Help?</h2>
     <div class="oe_slogan" style="margin-top:10px !important;">
         <div>
-            <a class="btn btn-primary btn-lg mt8"
-               style="color: #FFFFFF !important;border-radius: 0;" href="https://www.cybrosys.com"><i
-                    class="fa fa-envelope"></i> Email </a> <a
-                class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
-                href="https://www.cybrosys.com/contact/"><i
-                class="fa fa-phone"></i> Contact Us </a> <a
-                class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
-                href="https://www.cybrosys.com/odoo-customization-and-installation/"><i
-                class="fa fa-check-square"></i> Request Customization </a>
+            <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.cybrosys.com/contact/" target="_blank"><i
+            class="fa fa-phone"></i> Contact Us </a>
+
+            <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.odoo.com/apps/modules/browse?search=Educational" target="_blank"><i
+            class="fa fa-suitcase"></i> Other Educational Addons </a>
+
+            <a
+            class="btn btn-primary btn-lg mt8" style="color: #FFFFFF !important;border-radius: 0;"
+            href="https://www.cybrosys.com/odoo-customization-and-installation/" target="_blank"><i
+            class="fa fa-wrench"></i> Request Customization </a>
+
         </div>
         <br>
-        <img src="cybro_logo.png" style="width: 190px; margin-bottom: 20px;" class="center-block">
+        <a href="https://www.cybrosys.com/" target="_blank">
+            <img src="cybro_logo.png" style="width: 190px; margin-bottom: 20px;" class="center-block">
+        </a>
     </div>
 </section>
-
