[ADD] Education Announcement and Improvements

--- a/educational_announcement/static/description/index.html
+++ b/educational_announcement/static/description/index.html
@@ -8,30 +8,34 @@
    style="margin:75px 0;position: relative;color: #000;background-position: center;background: #ffffff;border-bottom: 1px solid #e4e4e4; padding-bottom: 30px;">
    <div class="col-md-7 col-sm-12 col-xs-12" style="padding: 0px">
       <div style=" margin: 0 0 0px;padding: 20px 0 10;font-size: 23px;line-height: 35px;font-weight: 400;color: #000;border-top: 1px solid rgba(255,255,255,0.1);border-bottom: 1px solid rgba(255,255,255,0.11);text-align: left;">
-         <h1 style="font-size: 39px;font-weight: 600;margin: 0px !important;">Educational Exam Management </h1>
-         <h3 style="font-size: 21px;margin-top: 8px;position: relative;"> Sneak the Examination management in Educational ERP  </h3>
+         <h1 style="font-size: 39px;font-weight: 600;margin: 0px !important;">School Announcement </h1>
+         <h3 style="font-size: 21px;margin-top: 8px;position: relative;">School Announcement in Educational ERP</h3>
       </div>
       <h2 style="font-weight: 600;font-size: 1.8rem;margin-top: 15px;">Key Highlights</h2>
       <ul style=" padding: 0 1px; list-style: none; ">
          <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
 			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-            Schedule Exam
+            Create General Announcement
          </li>
          <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
 			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-            Exam Types
+            Create Announcement for Faculties
          </li>
          <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
 			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-            Exam Valuation
+            Create Announcement for Students
          </li>
          <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
 			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-            Result Publication
+            Schedule Announcements
          </li>
          <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
 			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-            Reports
+            Real-Time Status of Announcements
+         </li>
+         <li style="display: flex;align-items: center;padding: 8px 0;font-size: 18px;">
+			 <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+            Failure Reason and Resend Option
          </li>
       </ul>
    </div>
@@ -77,12 +81,10 @@
                   <hr style="margin-top: 0px;margin-bottom: 2%;border: 0;text-align: center;border-top: 3px solid #d21c22;width: 5%;">
                   <h3 class="oe_slogan"
                      style="text-align: center;font-size: 19px;width: 100%;margin: 0;margin-top: 14px;color: #000 !important;opacity: 1 !important;line-height: 31px;font-weight: 400;letter-spacing: .5px;margin-bottom: 21px;">
-                     The examination is very pivotal in schools. It acts as a gateway to understand the potentialities of a
-                     student. A School exam management software eases the task of examination processes in schools. Education
-                     exam administers and verifies the following operations like scheduling the exam as per the class and
-                     division, results publishing and record management. It takes care of configuring number of classes,
-                     subjects, language and types of examinations. With Education Exam ERP, one can minimize the human
-                     intervention and errors in the exam management
+                     This new feature allows the school management to facilitate real-time communication to both student
+                     and faculties. It facilitates with sending of E-mails to both student and faculty community for
+                     imparting latest announcements of schools. It allows to schedule emails and to know about the
+                     status of the announcements
                   </h3>
                </div>
                <div class="px-3 pt-1 tab-pane fade" id="pills-home1" role="tabpanel" aria-labelledby="
@@ -98,33 +100,38 @@
                <div class="px-3 pt-1 tab-pane fade" id="pills-features" role="tabpanel" aria-labelledby="
                   pills-home-tab">
                   <!-- feature tab-->
-                  <h2 style="font-weight: 600;text-align: center;width: 100%;">Educational Examination Management </h2>
+                  <h2 style="font-weight: 600;text-align: center;width: 100%;">School Announcement</h2>
                   <hr style="margin-top: 0px;margin-bottom: 2%;border: 0;text-align: center;border-top: 3px solid #d21c22;width: 5%;">
 
                      <p class="mb8"
                         style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
                         <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                        Schedule Exam
+                        Create Announcement for Faculties
                      </p>
                      <p class="mb8"
                         style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
                         <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                        Exam Types
+                        Create General Announcement
                      </p>
                      <p class="mb8"
                         style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
                         <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                        Exam Valuation
+                        Create Announcement for Student
                      </p>
                      <p class="mb8"
                         style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
                         <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                        Result Publication
+                        Schedule Announcements
                      </p>
                      <p class="mb8"
                         style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
                         <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                        Reports
+                        Real-Time Status of Announcements
+                     </p>
+                     <p class="mb8"
+                        style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; background-color: #3a34380d;padding-left: 20px;border-radius: 7px;list-style: none;">
+                        <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+                        Failure Reason and Resend Option
                      </p>
                </div>
                <!-- Screenshot tab-->
@@ -143,72 +150,27 @@
                                        <h3 class="alert"
                                           style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
                                           <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                                          Create a new Exam
+                                          Create a new Announncement
+                                       </h3>
+                                        <p></p>
+                                       <div style=""><img class="img img-responsive center-block"
+                                          style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                                          src="images/1_education_announcement.png"></div>
+                                    </div>
+                                 </div>
+                                 <div class="carousel-item " style="min-height: 0px;">
+                                    <div class="col-xs-12 col-sm-12 col-md-12 mb16 mt16"
+                                       style="float: left;">
+                                       <h3 class="alert"
+                                          style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
+                                          <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
+                                          Failure Reason and Resend Option
                                        </h3>
                                        <p>
-                                           Schedule exam as per the class and division
                                        </p>
                                        <div style=""><img class="img img-responsive center-block"
                                           style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
-                                          src="images/exam.png"></div>
-                                    </div>
-                                 </div>
-                                 <div class="carousel-item " style="min-height: 0px;">
-                                    <div class="col-xs-12 col-sm-12 col-md-12 mb16 mt16"
-                                       style="float: left;">
-                                       <h3 class="alert"
-                                          style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
-                                          <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                                          Exam Types
-                                       </h3>
-                                       <p>
-                                          Different types of exams
-                                       </p>
-                                       <div style=""><img class="img img-responsive center-block"
-                                          style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
-                                          src="images/exam_type.png"></div>
-                                    </div>
-                                 </div>
-                                 <div class="carousel-item " style="min-height: 0px;">
-                                    <div class="col-xs-12 col-sm-12 col-md-12 mb16 mt16"
-                                       style="float: left;">
-                                       <h3 class="alert"
-                                          style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
-                                          <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                                          Exam Valuation
-                                       </h3>
-                                       <p></p>
-                                       <div style=""><img class="img img-responsive center-block"
-                                          style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
-                                          src="images/valuation.png"></div>
-                                    </div>
-                                 </div>
-                                 <div class="carousel-item" style="min-height: 0px;">
-                                    <div class="col-xs-12 col-sm-12 col-md-12 mb16 mt16"
-                                       style="float: left;">
-                                       <h3 class="alert"
-                                          style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
-                                          <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                                          Exam Results
-                                       </h3>
-                                       <p></p>
-                                       <div style=""><img class="img img-responsive center-block"
-                                          style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
-                                          src="images/student_report.png"></div>
-                                    </div>
-                                 </div>
-                                 <div class="carousel-item " style="min-height: 0px;">
-                                    <div class="col-xs-12 col-sm-12 col-md-12 mb16 mt16"
-                                       style="float: left;">
-                                       <h3 class="alert"
-                                          style="font-weight:400;color: #091E42;background: #fff;text-align: left;border-radius: 0; font-size: 18px;">
-                                          <i class="fa fa-check-circle-o"  style="width:40px; color:#e25151;"></i>
-                                          Reports
-                                       </h3>
-                                       <p></p>
-                                       <div style=""><img class="img img-responsive center-block"
-                                          style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
-                                          src="images/report.png"></div>
+                                          src="images/2_education_announcement_failure.png"></div>
                                     </div>
                                  </div>
                               </div>
@@ -248,16 +210,6 @@
                </div>
                <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float: left;">
                   <a
-                     href="https://apps.odoo.com/apps/modules/14.0/education_attendances/" target="_blank">
-                     <div style="box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);border-radius: 10px;">
-                        <img class="img img-responsive center-block"
-                           style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
-                           src="images/attendance_image.png">
-                     </div>
-                  </a>
-               </div>
-               <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float: left;">
-                  <a
                      href="https://apps.odoo.com/apps/themes/14.0/education_theme/" target="_blank">
                      <div style="box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);border-radius: 10px;">
                         <img class="img img-responsive center-block"
@@ -266,8 +218,6 @@
                      </div>
                   </a>
                </div>
-            </div>
-            <div class="carousel-item" style="min-height: 0px;">
                <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float: left;">
                   <a
                      href="https://apps.odoo.com/apps/modules/14.0/education_exam/" target="_blank">
@@ -275,6 +225,18 @@
                         <img class="img img-responsive center-block"
                            style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
                            src="images/exam_image.png">
+                     </div>
+                  </a>
+               </div>
+            </div>
+            <div class="carousel-item" style="min-height: 0px;">
+               <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float: left;">
+                  <a
+                     href="https://apps.odoo.com/apps/modules/14.0/education_attendances/" target="_blank">
+                     <div style="box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);border-radius: 10px;">
+                        <img class="img img-responsive center-block"
+                           style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                           src="images/attendance_image.png">
                      </div>
                   </a>
                </div>
@@ -598,7 +560,3 @@
       </div>
    </section>
 </div>
-
-
-
-
