--- a/education_core/static/description/index.html
+++ b/education_core/static/description/index.html
@@ -458,7 +458,7 @@
             <div class="carousel-item" style="min-height: 0px;">
                <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float: left;">
                   <a
-                     href="https://apps.odoo.com/apps/modules/14.0/education_theme/" target="_blank">
+                     href="https://apps.odoo.com/apps/themes/14.0/education_theme/" target="_blank">
                      <div style="box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);border-radius: 10px;">
                         <img class="img img-responsive center-block"
                            style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
